[tool.poetry]
name = "ordinal-scale-stats"
version = "0.0.1"
description = ""
authors = ["HackerSpace Trójmiasto"]
license = "MIT license"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.3.0"
flake8 = "^6.0.0"
pytest = "^7.4.0"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
