[tool.poetry]
name = "ordinal-scale-stats"
version = "0.0.2"
description = ""
authors = ["HackerSpace Trójmiasto"]
license = "MIT license"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.3.0"
flake8 = "^6.0.0"
pytest = "^7.4.0"
pandas = "^2.0.3"
numpy = "^1.25.1"
scipy = "^1.11.1"
pydantic = "^2.6.0"
jupyter = "^1.0.0"


[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
