[tool.poetry]
name = "surveypie"
version = "0.0.1"
description = "Polarization indices in Python"
authors = ["HackerSpace Trójmiasto"]
license = "MIT"
readme = "README.md"
packages = [{include = "surveypie", from = "src"}]
repository = "https://github.com/hs3city/surveypie"
keywords = ["statistics", "ordinal scale", "Likert scale", "polarization indices", "inequality indices"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Sociology"
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^1.26.4"
scipy = "^1.13.0"
pydantic = "^2.7.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
flake8 = "^7.0.0"
pytest = "^8.1.1"


[tool.black]
line-length = 79

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
